kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-info-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-info-app
  template:
    metadata:
      labels:
        app: kube-info-app
    spec:
      containers:
        - name: kube-info-container
          image: ghcr.io/heymikeey/kube-info/kube-info:latest
          ports:
            - containerPort: 5000
